--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_feature_tour
 description: " A powerful and customizable feature tour package for Flutter applications."
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: https://github.com/samuelkchris/flutter_feature_tour
+repository: https://github.com/samuelkchris/flutter_feature_tour
+
 
 environment:
   sdk: ^3.5.3
@@ -12,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  web: ^0.5.1
+  web: ^1.1.0
   plugin_platform_interface: ^2.0.2
   iconsax: ^0.0.8
   hive: ^2.2.3
@@ -20,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
