chore: bump version to 0.1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_feature_tour
 description: " A powerful and customizable feature tour package for Flutter applications."
-version: 0.0.2
+version: 0.1.0
 homepage: https://github.com/samuelkchris/flutter_feature_tour
 repository: https://github.com/samuelkchris/flutter_feature_tour
 
@@ -17,7 +17,7 @@ dependencies:
   web: ^1.1.0
   plugin_platform_interface: ^2.0.2
   iconsax: ^0.0.8
-  hive: ^2.2.3
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
